Welcome to Gutenprint 5.2.8-pre1, a prerelease of Gutenprint 5.2.8.
This release has bug fixes, support for some new printers, and a few
new features over 5.2.7.  Please read these release notes carefully.

Gutenprint is a suite of printer drivers that may be used with most
common UNIX print spooling systems, including CUPS, lpr, LPRng, or
others.  Gutenprint currently supports over 1700 printer models.
These drivers provide high quality printing for UNIX, Linux, and
Macintosh OS X (10.3 and above) systems.  Gutenprint includes CUPS and
Foomatic drivers, and an enhanced Print plug-in for GIMP that replaces
the print plug-in packaged with the GIMP distribution.

Gutenprint 5.2 no longer supports Macintosh OS X 10.2.

*** NOTE TO PACKAGERS: Please read the file README.package for issues
    that are of interest to distributors and packagers of Gutenprint.
    It is not necessary for end users of Gutenprint to read this file.

These release notes contain the following sections:

I)    General Requirements
II)   Critical Upgrade Note
III)  Changes from Previous Releases
        * Changes from 5.2.7
        * Changes from 5.2.6
        * Changes from 5.2.5
        * Changes from 5.2.4
        * Changes from 5.2.3
        * Changes from 5.2.2
        * Changes from 5.2.1
IV)   Exceptions and Workarounds
	A) General Issues
	B) Printer-Specific Issues
	C) Build/Installation Issues
V)    Overall changes from 5.0.2 to 5.2
	A) General User-visible Changes
	B) New Functionality
	C) Changes to the Enhanced Print plugin for GIMP
	D) Changes to the CUPS interface
	E) Changes to the Foomatic interface
	F) Quality Improvements
	G) Architectural Changes
	H) New Printers Supported in this Release


================================================================

I) GENERAL REQUIREMENTS

Gutenprint will run on any reasonably modern computer running Linux,
Macintosh OS X (10.3 or above), Solaris, or any other UNIX-like